--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
 @media (prefers-color-scheme: dark) {
   body {
     filter: invert(1) hue-rotate(180deg);
+    display: block margin: auto
+  }
+  .coffee {
+    display: block margin: auto
   }
 }
