--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 @media (prefers-color-scheme: dark) {
   body {
+    backdrop-filter: invert(1) hue-rotate(180deg);
     filter: invert(1) hue-rotate(180deg);
-    display: block margin: auto
   }
   .coffee {
-    display: block margin: auto
+    display: inline-block margin: auto
   }
 }
