--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 @media (prefers-color-scheme: dark) {
   body {
     backdrop-filter: invert(1) hue-rotate(180deg);
+    filter: invert(1) hue-rotate(180deg);
   }  
 }
 .coffee {
