--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @media (prefers-color-scheme: dark) {
   body {
     background-color: black;
-    filter: invert(1) hue-rotate(180deg)
+    filter: invert(1) hue-rotate(180deg);
   }  
 }
 
